fix: fallbacks for `width: stretch`

--- a/public/markdown.css
+++ b/public/markdown.css
@@ -15,6 +15,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  width: -webkit-fill-available;
   width: stretch;
   max-width: 1024px;
   padding: 0px 32px 64px !important;
@@ -53,6 +54,7 @@
     padding-inline: 24px !important;
     border-radius: unset;
     box-shadow: unset;
+    max-width: unset;
   }
 }
 
@@ -327,6 +329,7 @@ figure {
 
   img {
     display: block;
+    width: -webkit-fill-available;
     width: stretch;
     height: 100%;
     object-fit: cover;
@@ -357,6 +360,7 @@ figure {
 }
 
 dl {
+  width: -webkit-fill-available;
   width: stretch;
   margin: auto 0;
   columns: auto 228px;
@@ -395,6 +399,7 @@ dt:has(img) {
 
   img {
     display: block;
+    width: -webkit-fill-available;
     width: stretch;
     max-width: 300px !important;
     max-height: 180px;
@@ -406,6 +411,7 @@ dt:has(img) {
 /* Restaurant Lists */
 dl:has(ul) {
   justify-items: center;
+  width: -webkit-fill-available;
   width: stretch;
   margin: auto 0;
   columns: auto 300px;
@@ -413,6 +419,7 @@ dl:has(ul) {
 
   dt,
   dd {
+    width: -webkit-fill-available;
     width: stretch;
     max-width: 300px;
     padding-inline: 0px !important;
@@ -425,10 +432,12 @@ dl:has(ul) {
     flex-direction: column;
     align-items: center;
     row-gap: 12px;
+    width: -webkit-fill-available;
     width: stretch;
 
     img {
       display: block;
+      width: -webkit-fill-available;
       width: stretch;
       height: 100%;
       aspect-ratio: 3 / 2;
@@ -442,6 +451,7 @@ dl:has(ul) {
       content: "";
       top: -20px;
       left: 0;
+      width: -webkit-fill-available;
       width: stretch;
       aspect-ratio: 3 / 2;
       border-radius: 8px;
@@ -585,6 +595,7 @@ dl:has(span:is(.pos1, .pos2, .pos3, .pos4, .pos5)) {
     grid-column: 1;
     display: flex;
     justify-content: center;
+    width: -webkit-fill-available;
     width: stretch;
     margin: 0 !important;
     padding-inline: 12px;
@@ -668,6 +679,7 @@ dl:has(span:is(.pos1, .pos2, .pos3, .pos4, .pos5)) {
       display: flex;
       flex-direction: column;
       gap: 8px;
+      width: -webkit-fill-available;
       width: stretch;
       border-radius: 8px;
       margin-bottom: 24px;
@@ -707,6 +719,7 @@ dl:has(span:is(.pos1, .pos2, .pos3, .pos4, .pos5)) {
         z-index: -1;
         top: 0;
         left: 0;
+        width: -webkit-fill-available;
         width: stretch;
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
@@ -764,6 +777,7 @@ dl:has(span:is(.pos1, .pos2, .pos3, .pos4, .pos5)) {
         img {
           position: relative;
           display: block;
+          width: -webkit-fill-available;
           width: stretch;
           height: 100%;
           margin-bottom: 8px;
@@ -936,6 +950,7 @@ ul:has(a > img) {
       img {
         position: relative;
         display: block;
+        width: -webkit-fill-available;
         width: stretch;
         height: 100%;
         border-radius: 8px;
@@ -984,6 +999,7 @@ ul:has(a > img) {
       left: 0 !important;
       bottom: 0;
       right: 0;
+      width: -webkit-fill-available !important;
       width: stretch !important;
       border-top-left-radius: 8px;
       border-top-right-radius: 8px;
